--- a/supervision/frontend/index.html
+++ b/supervision/frontend/index.html
@@ -1,26 +1,14 @@
-<!-- 
-
-Ce fichier contient le squelette de l'application
-On y trouve la page principale de l'application
-Tout les traitements sont faits dans les fichiers js
-
--->
 <head>
+    <meta charset="utf-8">
+    <title>Superviseur Voiture +</title>
+
     <!-- integration des fichiers css associes -->
-    <link href="libs/bootstrap-5.3.8-dist/css/bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="libs/leaflet/dist/leaflet.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="style.css">
     <!-- fin de l'integration -->
 
     <!-- integration des fichiers js associes -->
-    <script src="libs/jquery-3.4.1.min.js"></script>
-    <script type="text/javascript" src="libs/bootstrap-5.3.8-dist/js/bootstrap.js"></script>
-    <script type="text/javascript" src="libs/leaflet/dist/leaflet.js"></script>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
     <!-- fin de l'integration -->
-
-    <meta charset="utf-8">
-    <title>Superviseur Voiture +</title>
 </head>
 
 
