feat: ux formulaire + card infos vehicule map

--- a/supervision/frontend/index.html
+++ b/supervision/frontend/index.html
@@ -88,9 +88,8 @@
                     </div>
              
                     <div class="text-center mt-4">
-                        <button id="calculTrajetBtn">
-                            Calculer le trajet
-                        </button>
+                        <button id="calculTravelBtn"> Calculer le trajet</button>
+                        <button id="editTravelBtn"> Modifier le trajet</button>
                     </div>
 
                 </div>
