feat: update form drag and drop

--- a/supervision/frontend/index.html
+++ b/supervision/frontend/index.html
@@ -89,7 +89,7 @@
              
                     <div class="text-center mt-4">
                         <button id="calculTravelBtn"> Calculer le trajet</button>
-                        <button id="editTravelBtn"> Modifier le trajet</button>
+                        <button id="cancelTravelBtn"> Annuler le trajet</button>
                     </div>
 
                 </div>
