--- a/supervision/frontend/index.html
+++ b/supervision/frontend/index.html
@@ -1,101 +1,18 @@
 <head>
     <meta charset="utf-8">
     <title>Superviseur Voiture +</title>
-
-    <!-- integration des fichiers css associes -->
-    <link rel="stylesheet" href="style.css">
-    <!-- fin de l'integration -->
-
-    <!-- integration des fichiers js associes -->
-    <script type="module" src="js/main.js"></script>
-    <!-- fin de l'integration -->
 </head>
 
+<script>
+    /***** VARIABLES GLOBALES *****/
+    window.API_URL = "http://169.254.87.118:3001/api/v1";
 
-<body>
+    /***** ROUTER *****/
+    window.API_KEY = sessionStorage.getItem('API_KEY'); // Récupère depuis le storage
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg p-2 px-5 mb-3 bg-white border-bottom shadow-sm">
-        <img src="images/logo.png" width="150px" height="50px" alt="">
-
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-5">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Accueil</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- fin Navbar -->
-
-    <div class="m-5 row">
-   
-        <!-- Map -->
-        <div id="map" class="m-2 col-md-8">
-        </div>
-        <!-- fin Map -->
-
-        <!-- Formulaire -->
-        <div id="trajet" class="m-2 col">
-
-            <div class="card mb-3">
-                <div class="card-header">
-                    Détails du trajet
-                </div>
-                
-                <div class="card-body">
-
-                    <div class="mb-3 row">
-                        <label class="form-label col-md-auto mt-2">Véhicule :</label>
-                        <div class="dropdown col">
-                            <button class="btn dropdown-toggle border" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                            <ul id="vehicleSelect" class="dropdown-menu">
-                            </ul>
-                        </div>
-                    </div>
-
-                    <p class="fw-semibold">Trajet :</p>
-
-                    <div class="mb-3 text-center">
-
-                        <div class="mb-3 step-item row mx-3 d-none" id="stepClonable">
-                            <div class="dropdown col">
-                                <button class="btn dropdown-toggle border w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                                <ul class="step-select dropdown-menu w-100 text-center">
-                                </ul>
-                            </div>
-                            <button class="col-auto deleteBtn remove-step">
-                                <svg viewBox="0 0 15 17.5" height="17.5" width="15" xmlns="http://www.w3.org/2000/svg" class="icon"><path transform="translate(-2.5 -1.25)" d="M15,18.75H5A1.251,1.251,0,0,1,3.75,17.5V5H2.5V3.75h15V5H16.25V17.5A1.251,1.251,0,0,1,15,18.75ZM5,5V17.5H15V5Zm7.5,10H11.25V7.5H12.5V15ZM8.75,15H7.5V7.5H8.75V15ZM12.5,2.5h-5V1.25h5V2.5Z"></path></svg>
-                            </button>
-                        </div>
-
-                        <div id="stepsContainer">
-                            <!-- Les étapes du trajet seront ajoutées ici -->
-                        </div>
-
-                        <button type="button" class="btn btn-outline-secondary btn-sm text-justify" id="addStepBtn">
-                            <i class="bi bi-plus-circle"></i> Ajouter une étape
-                        </button>
-                    </div>
-
-                    <label class="form-label">Destination finale :</label>
-                    <div class="mb-3">
-                        <div class="dropdown">
-                            <button class="btn dropdown-toggle border w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                            <ul id="destinationSelect" class="dropdown-menu text-center w-100">
-                            </ul>
-                        </div>
-                    </div>
-             
-                    <div class="text-center mt-4">
-                        <button id="calculTravelBtn"> Calculer le trajet</button>
-                        <button id="cancelTravelBtn"> Annuler le trajet</button>
-                    </div>
-
-                </div>
-                <!-- fin Formulaire -->
-
-            </div>
-        </div>
-    </div>
-</body>
+    if (!window.API_KEY) {
+        window.location.href = 'login.html';
+    } else {
+        window.location.href = 'main.html';
+    }
+</script>
