fix: ajax login

--- a/supervision/frontend/main.html
+++ b/supervision/frontend/main.html
@@ -11,6 +11,11 @@
     <!-- fin de l'integration -->
 </head>
 
+<script>
+    /***** VARIABLES GLOBALES *****/
+    window.API_URL = "http://169.254.87.118:80/api/v1";
+</script>
+
 <body>
 
     <!-- Navbar -->
