feat: calculer et annuler trajet + fix si travel null

--- a/supervision/frontend/index.html
+++ b/supervision/frontend/index.html
@@ -6,10 +6,10 @@
 <script>
     /***** ROUTER *****/
     window.API_KEY = sessionStorage.getItem('API_KEY'); // Récupère depuis le storage
-/*
+
     if (!window.API_KEY) {
         window.location.href = 'login.html';
-    } else {*/
+    } else {
         window.location.href = 'main.html';
-    //}
+    }
 </script>
